# shelljougahara-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: commands.rs  errors.rs  fs.rs  lib.rs  sessions.rs  shell.rs
src/commands/: args.rs  flags.rs  list.rs
src/commands/list/: cd.rs  echo.rs  exit.rs  history.rs  ls.rs  mkdir.rs  pwd.rs  rm.rs  touch.rs
src/fs/: inode.rs  permissions.rs  resolver.rs  users.rs
src/fs/inode/: content.rs  metadata.rs  size.rs
src/fs/inode/content/: directory.rs  file.rs  link.rs
tests/shell/: commands.rs  main.rs  tests.rs
tests/shell/commands/: cd.rs  echo.rs  exit.rs  history.rs  ls.rs  mkdir.rs  pwd.rs  rm.rs  touch.rs
