[package]
name = "shelljougahara"
description = "An interactive shell written in Rust, made to be used in a WASM environment."
publish = true
version = "0.1.0"
edition = "2024"
authors = ["Seweryn Czykinowski <sevveryn.czykinowski@gmail.com>"]

[dependencies]
chrono = "0.4.41"
shlex = "1.3.0"
enum_dispatch = "0.3.13"
strum = "0.26.0"
strum_macros = "0.26.0"
thiserror = "2.0.10"
